manifests/overlays/dev/deployment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: t82107479-deploy
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: t82107479
          command: ["java","-jar","/app.jar"]
          args: ["--spring.config.location=file:/config/application.yml"]
          volumeMounts:
          - mountPath: /mnt/cloud-sample
            name: ce-aa-rwmany-pvc
            readOnly: false
            subPath: cloud-sample
          - mountPath: /config
            name: application-properties
            readOnly: true
                          
      volumes:
      - name: ce-aa-rwmany-pvc
        persistentVolumeClaim:
          claimName: ce-aa-rwmany-pvc
      - name: application-properties
        configMap:
          name: t82107479-configmap
          items:
            - key: application.yml
              path: application.yml
          defaultMode: 420
